Bug 156368 - Watermark font not working if starts with CJK or CTL characters
Summary: Watermark font not working if starts with CJK or CTL characters
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.4.2 release
Hardware: All All
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:24.2.0 target:7.6.0.2 target:7...
Keywords:
Depends on:
Blocks: CJK CTL Language-Grouping
  Show dependency treegraph
 
Reported: 2023-07-19 03:01 UTC by vicxp0518
Modified: 2024-08-03 19:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vicxp0518 2023-07-19 03:01:24 UTC
Description:
Setting font for watermark does not working, if the watermark text starts with CJK characters.

Steps to Reproduce:
1.Set a watermark, which the 1st character is CJK.
2.Set a font.
3.Apply to see.

Actual Results:
The font does not apply, *unless* have inserted a half-width character right before the CJK text.

Expected Results:
Needless to be starting with half-width characters.


Reproducible: Always


User Profile Reset: No

Additional Info:
NA
Comment 1 Khaled Hosny 2023-07-25 13:17:30 UTC
It does not affect only CJK, if it is CTL text, the font is also not used unless the text starts with a Western (e.g. Latin) character.
Comment 2 Commit Notification 2023-07-26 02:19:38 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/24d0a62bd75b9a895c419aa165da648ab18f134d

tdf#156368: Fix setting watermark font for CJK/CTL text

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-07-26 08:00:10 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/1889b5f6d69224185b74f435e52f540ab2a7512a

tdf#156368: Fix setting watermark font for CJK/CTL text

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-07-26 11:13:51 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/88db6f673e7e9ade442ff08f1e5ddace47d475df

tdf#156368: Fix setting watermark font for CJK/CTL text

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.