tdf#156368: Fix setting watermark font for CJK/CTL text

We were setting only Western font when getting the shape, so if there is
no Western characters in the text the default font would be used. There
is no separate setting for CJK/CTL fonts, so we sets the same font for
all the three.

Change-Id: If2ba2a206f95e0efe9139b9d092b1d6dbf05967c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154894
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
(cherry picked from commit 24d0a62bd75b9a895c419aa165da648ab18f134d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154920
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>